[package]
name = "unstable_platform"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.0"
bevy-inspector-egui = "0.28.0"
bevy_rapier2d = "0.28.0"
toolkit = { path = "../toolkit" }
